# o2_visdata

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/design/: auth_design.md
docs/requirements/: auth_requirement.md
src/: lib.rs
src/common/: id.rs  mod.rs
src/config/: get_config.rs  mod.rs  types.rs
src/dex/: client.rs  config.rs  error.rs  mod.rs  types.rs
src/dex/handler/: connectors.rs  login.rs  mod.rs
src/dex/meta/: auth.rs  mod.rs
src/dex/service/: connector.rs  mod.rs  token.rs
src/enterprise/: mod.rs
src/enterprise/common/: config.rs  mod.rs
src/openfga/: client.rs  config.rs  error.rs  mod.rs  types.rs
src/openfga/authorizer/: authz.rs  groups.rs  mod.rs  roles.rs
src/openfga/meta/: mapping.rs  mod.rs
src/openfga/model/: authorization_model.json  mod.rs  resources.rs  schema.rs
src/openfga/service/: checker.rs  groups.rs  mod.rs  roles.rs  tuples.rs
