[package]
name = "visdata"
version = "0.1.0"
edition = "2025"
description = "VisData Enterprise module for OpenObserve"
license = "AGPL-3.0"

[dependencies]
# gRPC (for Dex integration)
tonic = { version = "0.14", features = ["gzip", "tls-webpki-roots"] }

# Web framework
actix-web = { version = "4.12", features = ["rustls-0_23"] }

# JWT token parsing
jsonwebtoken = "9.3"

# Lazy static
once_cell = "1.20"

# Regex for SDR pattern matching (log_patterns module)
regex = "1.11"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }

# ID generation
svix-ksuid = { version = "0.8", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["actix_extras", "openapi_extensions"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Logging
tracing = "0.1.40"
log = "0.4"

# Cache
dashmap = { version = "6.1", features = ["serde"] }

# Async traits
async-trait = "0.1"
futures = "0.3"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# ID generation (uuid)
uuid = { version = "1.18", features = ["v4"] }

# Encryption for sensitive config
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9.2"
sha2 = "0.10"

# URL handling
url = "2.5"
urlencoding = "2.1"

# Internal dependencies - 指向并行的 openobserve 项目
#infra = { path = "../openobserve/src/infra" }
#proto = { path = "../openobserve/src/proto" }

infra = { git = "https://github.com/visdata-com/openobserve.git", branch = "main", package = "infra" }
proto = { git = "https://github.com/visdata-com/openobserve.git", branch = "main", package = "proto" }
